--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3107,4 +3107,426 @@ input, select, textarea {
 						#copyright ul li:first-child {
 							margin-top: 0;
 						}
-	}
+
+					}
+						/* Timeline */
+
+						.timeline {
+							position: relative;
+							padding: 0;
+							list-style: none;
+							margin-bottom: 100px;
+							min-height: 100px;
+						}
+						
+						.timeline:before {
+							content: "";
+							position: absolute;
+							top: 0;
+							bottom: 0;
+							left: 40px;
+							width: 2px;
+							margin-left: -1.5px;
+							background-color: #222;
+						}
+						
+						.timeline>li {
+							position: relative;
+							margin-bottom: 50px;
+							min-height: 50px;
+						}
+						
+						.timeline>li:before, .timeline>li:after {
+							content: " ";
+							display: table;
+						}
+						
+						.timeline>li:after {
+							clear: both;
+						}
+						
+						.timeline>li .timeline-panel {
+							float: right;
+							position: relative;
+							width: 100%;
+							padding: 0 20px 0 100px;
+							text-align: left;
+						}
+						
+						.timeline>li .timeline-panel:before {
+							right: auto;
+							left: -15px;
+							border-right-width: 15px;
+							border-left-width: 0;
+						}
+						
+						.timeline>li .timeline-panel:after {
+							right: auto;
+							left: -14px;
+							border-right-width: 14px;
+							border-left-width: 0;
+						}
+						
+						.timeline>li .timeline-image {
+							z-index: 100;
+							position: absolute;
+							left: 0;
+							width: 80px;
+							height: 80px;
+							margin-left: 0;
+							border: 7px solid #333;
+							border-radius: 100%;
+							text-align: center;
+							color: #fff;
+							background-color: #ff8f00;
+						}
+						
+						.timeline>li .timeline-image h4 {
+							margin-top: 12px;
+							font-size: 10px;
+							line-height: 14px;
+						}
+						
+						.timeline>li.timeline-inverted>.timeline-panel {
+							float: right;
+							padding: 0 20px 0 100px;
+							text-align: left;
+							margin-top: 25px;
+						}
+						
+						.timeline>li.timeline-inverted>.timeline-panel:before {
+							right: auto;
+							left: -15px;
+							border-right-width: 15px;
+							border-left-width: 0;
+						}
+						
+						.timeline>li.timeline-inverted>.timeline-panel:after {
+							right: auto;
+							left: -14px;
+							border-right-width: 14px;
+							border-left-width: 0;
+						}
+						
+						.timeline>li:last-child {
+							margin-bottom: 0;
+						}
+						
+						.timeline .timeline-heading h4 {
+							margin-top: 0;
+							color: inherit;
+						}
+						
+						.timeline .timeline-heading h4.subheading {
+							text-transform: none;
+						}
+						
+						.timeline .timeline-body>p, .timeline .timeline-body>ul {
+							margin-bottom: 0;
+						}
+						
+						@media(min-width: 768px) {
+							.timeline:before {
+								left: 50%;
+							}
+						
+							.timeline>li {
+								margin-bottom: 100px;
+								min-height: 100px;
+							}
+						
+							.timeline>li .timeline-panel {
+								float: left;
+								width: 41%;
+								padding: 0 20px 20px 30px;
+								text-align: right;
+								margin-top: 25px;
+							}
+						
+							.timeline>li .timeline-image {
+								left: 50%;
+								width: 100px;
+								height: 100px;
+								margin-left: -50px;
+							}
+						
+							.timeline>li .timeline-image h4 {
+								margin-top: 16px;
+								font-size: 13px;
+								line-height: 18px;
+							}
+						
+							.timeline>li.timeline-inverted>.timeline-panel {
+								float: right;
+								padding: 0 30px 20px 20px;
+								text-align: left;
+							}
+						}
+						
+						@media(min-width: 992px) {
+							.timeline>li {
+								min-height: 150px;
+							}
+						
+							.timeline>li .timeline-panel {
+								padding: 0 20px 20px;
+							}
+						
+							.timeline>li .timeline-image {
+								width: 150px;
+								height: 150px;
+								margin-left: -75px;
+							}
+						
+							.timeline>li .timeline-image h4 {
+								margin-top: 30px;
+								font-size: 18px;
+								line-height: 26px;
+							}
+						
+							.timeline>li.timeline-inverted>.timeline-panel {
+								padding: 0 20px 20px;
+							}
+						}
+						
+						@media(min-width: 1200px) {
+							.timeline>li {
+								min-height: 170px;
+							}
+						
+							.timeline>li .timeline-panel {
+								padding: 0 20px 20px 100px;
+							}
+						
+							.timeline>li .timeline-image {
+								width: 170px;
+								height: 170px;
+								margin-left: -85px;
+							}
+						
+							.timeline>li .timeline-image h4 {
+								margin-top: 40px;
+							}
+						
+							.timeline>li.timeline-inverted>.timeline-panel {
+								padding: 0 100px 20px 20px;
+							}
+						}
+						.img-circle {
+							border-radius: 50%
+						}
+						.img-responsive,.thumbnail>img,.thumbnail a>img,.carousel-inner>.item>img,.carousel-inner>.item>a>img {
+							display: block;
+							width: 100% \9;
+							max-width: 100%;
+							height: auto
+						}
+						@media (min-width: 1200px) {
+							.col-lg-1,.col-lg-2,.col-lg-3,.col-lg-4,.col-lg-5,.col-lg-6,.col-lg-7,.col-lg-8,.col-lg-9,.col-lg-10,.col-lg-11,.col-lg-12 {
+								float:left
+							}
+						
+							.col-lg-12 {
+								width: 100%
+							}
+						
+							.col-lg-11 {
+								width: 91.66666667%
+							}
+						
+							.col-lg-10 {
+								width: 83.33333333%
+							}
+						
+							.col-lg-9 {
+								width: 75%
+							}
+						
+							.col-lg-8 {
+								width: 66.66666667%
+							}
+						
+							.col-lg-7 {
+								width: 58.33333333%
+							}
+						
+							.col-lg-6 {
+								width: 50%
+							}
+						
+							.col-lg-5 {
+								width: 41.66666667%
+							}
+						
+							.col-lg-4 {
+								width: 33.33333333%
+							}
+						
+							.col-lg-3 {
+								width: 25%
+							}
+						
+							.col-lg-2 {
+								width: 16.66666667%
+							}
+						
+							.col-lg-1 {
+								width: 8.33333333%
+							}
+						
+							.col-lg-pull-12 {
+								right: 100%
+							}
+						
+							.col-lg-pull-11 {
+								right: 91.66666667%
+							}
+						
+							.col-lg-pull-10 {
+								right: 83.33333333%
+							}
+						
+							.col-lg-pull-9 {
+								right: 75%
+							}
+						
+							.col-lg-pull-8 {
+								right: 66.66666667%
+							}
+						
+							.col-lg-pull-7 {
+								right: 58.33333333%
+							}
+						
+							.col-lg-pull-6 {
+								right: 50%
+							}
+						
+							.col-lg-pull-5 {
+								right: 41.66666667%
+							}
+						
+							.col-lg-pull-4 {
+								right: 33.33333333%
+							}
+						
+							.col-lg-pull-3 {
+								right: 25%
+							}
+						
+							.col-lg-pull-2 {
+								right: 16.66666667%
+							}
+						
+							.col-lg-pull-1 {
+								right: 8.33333333%
+							}
+						
+							.col-lg-pull-0 {
+								right: auto
+							}
+						
+							.col-lg-push-12 {
+								left: 100%
+							}
+						
+							.col-lg-push-11 {
+								left: 91.66666667%
+							}
+						
+							.col-lg-push-10 {
+								left: 83.33333333%
+							}
+						
+							.col-lg-push-9 {
+								left: 75%
+							}
+						
+							.col-lg-push-8 {
+								left: 66.66666667%
+							}
+						
+							.col-lg-push-7 {
+								left: 58.33333333%
+							}
+						
+							.col-lg-push-6 {
+								left: 50%
+							}
+						
+							.col-lg-push-5 {
+								left: 41.66666667%
+							}
+						
+							.col-lg-push-4 {
+								left: 33.33333333%
+							}
+						
+							.col-lg-push-3 {
+								left: 25%
+							}
+						
+							.col-lg-push-2 {
+								left: 16.66666667%
+							}
+						
+							.col-lg-push-1 {
+								left: 8.33333333%
+							}
+						
+							.col-lg-push-0 {
+								left: auto
+							}
+						
+							.col-lg-offset-12 {
+								margin-left: 100%
+							}
+						
+							.col-lg-offset-11 {
+								margin-left: 91.66666667%
+							}
+						
+							.col-lg-offset-10 {
+								margin-left: 83.33333333%
+							}
+						
+							.col-lg-offset-9 {
+								margin-left: 75%
+							}
+						
+							.col-lg-offset-8 {
+								margin-left: 66.66666667%
+							}
+						
+							.col-lg-offset-7 {
+								margin-left: 58.33333333%
+							}
+						
+							.col-lg-offset-6 {
+								margin-left: 50%
+							}
+						
+							.col-lg-offset-5 {
+								margin-left: 41.66666667%
+							}
+						
+							.col-lg-offset-4 {
+								margin-left: 33.33333333%
+							}
+						
+							.col-lg-offset-3 {
+								margin-left: 25%
+							}
+						
+							.col-lg-offset-2 {
+								margin-left: 16.66666667%
+							}
+						
+							.col-lg-offset-1 {
+								margin-left: 8.33333333%
+							}
+						
+							.col-lg-offset-0 {
+								margin-left: 0%
+							}
+						}
